<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/vs_40"
    android:paddingTop="@dimen/vs_30"
    android:paddingRight="@dimen/vs_40"
    android:paddingBottom="@dimen/vs_40">

    <LinearLayout
        android:id="@+id/tvUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clickable="false"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_history"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center|start"
                android:text="@string/hm_hist"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvLive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_live"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_live" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:layout_marginStart="@dimen/vs_4"
                android:layout_marginLeft="@dimen/vs_4"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_live"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_search"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_search"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tvPush"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_push"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_push" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_push"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvDrive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_drive"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_file"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvFavorite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_fav"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_fav" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_fav"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_100"
            android:layout_gravity="center"
            android:layout_margin="@dimen/vs_5"
            android:background="@drawable/shape_user_home"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:minWidth="@dimen/vs_145"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_15"
            android:paddingTop="@dimen/vs_15"
            android:paddingRight="@dimen/vs_15"
            android:paddingBottom="@dimen/vs_15">


            <ImageView
                android:id="@+id/hm_settings"
                android:layout_width="@dimen/vs_40"
                android:layout_height="@dimen/vs_40"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:alpha="0.75"
                android:src="@drawable/hm_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vs_5"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/hm_setting"
                android:textAlignment="gravity"
                android:textColor="@color/color_FFFFFF_80"
                android:textSize="@dimen/ts_24" />

        </LinearLayout>

    </LinearLayout>

    <com.owen.tvrecyclerview.widget.TvRecyclerView
        android:id="@+id/tvHotList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vs_440"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/vs_0"
        android:paddingTop="@dimen/vs_40"
        android:paddingRight="@dimen/vs_0"
        android:paddingBottom="@dimen/vs_40"
        app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
        app:tv_layoutManager="V7LinearLayoutManager"
        app:tv_selectedItemIsCentered="true"
        app:tv_verticalSpacingWithMargins="@dimen/vs_10" />

</LinearLayout>